Adding way to see delta vs the previous period
Bug: 1235363
Change-Id: I7ed275b3c164c01380b9af0876a7dade4af8e8d2
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/3067701
Commit-Queue: Gary Tong <gatong@chromium.org>
Reviewed-by: Tiffany Zhang <zhangtiff@chromium.org>
Cr-Commit-Position: refs/heads/master@{#42810}

--- a/go/src/infra/appengine/statsui/frontend/src/features/metrics/MetricsTableSection.module.css
+++ b/go/src/infra/appengine/statsui/frontend/src/features/metrics/MetricsTableSection.module.css
@@ -1,5 +1,5 @@
 tr.odd {
-  background: #f1f3f4;
+  background: var(--table-odd-row-color);
 }
 
 .section .rank {
@@ -9,7 +9,7 @@ tr.odd {
 
 .section .name {
   vertical-align: top;
-  border-right: 1px solid #e0e0e0;
+  border-right: 1px solid var(--grey-300);
 }
 
 .indent .name {
